# SimpleGLEngine

./: CMakeLists.txt  main.cpp
include/: GameObject.h  Shader.cpp  Shader.h  Window.cpp  Window.h
include/DefaultShaders/: Default.frag  Default.vert
include/Utils/: Timer.cpp  Timer.h
